refactored UserController.java, added domain exceptions, globalExceptionHandler, ApiResponse, request dtos